# OpenSearch

./: .gitattributes  .gitignore  .linelint.yml  .lychee.excludes  .lycheeexclude  .lycheeignore  .pnp.cjs  .whitesource  ADMINS.md  AGENTS.md  CHANGELOG-3.0.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-lucene-backend-plugin.md  DEVELOPER_GUIDE.md  FOYER_UNIFIED_CACHE_DESIGN.md  IDENTITY_ROADMAP.md  IDENTITY_USE_CASES.md  Jenkinsfile  LICENSE.txt  MAINTAINERS.md  NOTICE.txt  PERFORMANCE_BENCHMARKS.md  README-SECURITY.md  README.md  README.md.save  RELEASING.md  ROADMAP.md  SECURITY.md  SECURITY_AUTO_CONFIG.md  STARTING.md  TESTING.asciidoc  TESTING.md  TRIAGE.md  TRIAGING.md  VERSION  VERSION.json  Vagrantfile  arraylist.java  (+22 more)
modules/parquet-data-format/src/main/rust/: Cargo.toml
modules/parquet-data-format/src/main/rust/.cargo/: config.toml
modules/parquet-data-format/src/main/rust/src/: context.rs  field_config.rs  lib.rs  logger.rs  merge_polars_read_arrow_tokio.rs  native_settings.rs  parquet_exec.rs  parquet_merge.rs  parquet_merge_hybrid.rs  parquet_merge_polars.rs  parquet_merge_stream.rs  parquet_merge_stream1.rs  parquet_merge_stream_pure_arrowrs_time.rs  profiler.rs  rate_limited_writer.rs  read_lib.rs  writer_config.rs  writer_properties_builder.rs
plugins/dataformat-csv/jni/: Cargo.toml
plugins/dataformat-csv/jni/src/: context.rs  csv_exec.rs  lib.rs  runtime.rs  stream.rs  substrait.rs  util.rs
plugins/engine-datafusion/: .gitignore  Cargo.toml  README.md  build.gradle
plugins/engine-datafusion/jni/: Cargo.toml  build.rs
plugins/engine-datafusion/jni/.cargo/: config.toml
plugins/engine-datafusion/jni/src/: absolute_row_id_optimizer.rs  cache.rs  cache_jni.rs  cache_policy.rs  cancellation.rs  cross_rt_stream.rs  custom_cache_manager.rs  eviction_policy.rs  executor.rs  indexed_query_executor.rs  io.rs  jemalloc_monitor.rs  jni_bridge.rs  lib.rs  liquid_cache.rs  listing_table.rs  logger.rs  memory.rs  metrics_collector.rs  metrics_layout.rs  partial_agg_optimizer.rs  project_row_id_analyzer.rs  query_executor.rs  query_memory_pool_tracker.rs  query_metrics.rs  row_id_optimizer.rs  runtime_manager.rs  statistics_cache.rs  util.rs
plugins/engine-datafusion/jni/src/indexed_table/: index.rs  jni_searcher.rs  metrics.rs  mod.rs  page_pruner.rs  stream.rs
plugins/engine-datafusion/licenses/: arrow-c-data-17.0.0.jar.sha1  arrow-memory-unsafe-17.0.0.jar.sha1  checker-qual-3.42.0.jar.sha1  flatbuffers-java-23.5.26.jar.sha1  protobuf-java-3.25.8.jar.sha1
plugins/engine-datafusion/src/test/resources/: clickbench.json  clickbench_index_mapping.json  hits3.parquet  parquet_file_generation_0.parquet  parquet_file_generation_1.parquet  parquet_file_generation_2.parquet  q1.json  q10.json  q11.json  q12.json  q13.json  q14.json  q15.json  q16.json  q17.json  q18.json  q19.json  q2.json  q20.json  q21.json  q22.json  q23.json  q24.json  q25.json  q26.json  q27.json  q28.json  q29.json  q3.json  q30.json  q31.json  q32.json  q33.json  q35.json  q36.json  q37.json  q38.json  q39.json  q4.json  q40.json  (+9 more)
sandbox/libs/dataformat-native/rust/: Cargo.toml
sandbox/libs/dataformat-native/rust/.cargo/: config.toml
sandbox/libs/dataformat-native/rust/common/: Cargo.toml
sandbox/libs/dataformat-native/rust/lib/: Cargo.toml
sandbox/libs/dataformat-native/rust/liquid-cache/: README.md
sandbox/libs/dataformat-native/rust/macros/: Cargo.toml
sandbox/libs/dataformat-native/rust/query-spi/: Cargo.toml
sandbox/modules/foyer-page-cache/rust/: Cargo.toml
sandbox/modules/foyer-page-cache/rust/src/: lib.rs
sandbox/plugins/analytics-backend-datafusion/: .gitignore  Cargo.toml  README.md  build.gradle
sandbox/plugins/analytics-backend-datafusion/jni/: Cargo.toml
sandbox/plugins/analytics-backend-datafusion/jni-macros/: Cargo.toml
sandbox/plugins/analytics-backend-datafusion/jni-macros/src/: lib.rs
sandbox/plugins/analytics-backend-datafusion/jni/benches/: query_bench.rs
sandbox/plugins/analytics-backend-datafusion/jni/src/: api.rs  lib.rs  macros.rs  query_executor.rs  runtime_manager.rs  util.rs
sandbox/plugins/analytics-backend-datafusion/licenses/: arrow-c-data-18.1.0.jar.sha1  arrow-c-data-18.3.0.jar.sha1  arrow-format-18.3.0.jar.sha1  arrow-memory-core-18.1.0.jar.sha1  arrow-memory-core-18.3.0.jar.sha1  arrow-memory-unsafe-18.3.0.jar.sha1  arrow-vector-18.3.0.jar.sha1  core-0.67.0.jar.sha1  core-0.89.1.jar.sha1  flatbuffers-java-2.0.0.jar.sha1  ipaddress-5.4.2.jar.sha1  isthmus-0.67.0.jar.sha1  isthmus-0.89.1.jar.sha1  jackson-datatype-jdk8-2.21.2.jar.sha1  jackson-datatype-jdk8-2.21.3.jar.sha1  jackson-datatype-jdk8-2.22.0.jar.sha1  jackson-datatype-jdk8-2.22.1.jar.sha1  jackson-datatype-jdk8-LICENSE.txt  lz4-java-NOTICE.txt
sandbox/plugins/analytics-backend-datafusion/rust/: Cargo.toml
sandbox/plugins/analytics-backend-datafusion/rust/benches/: cross_rt_throughput_bench.rs  fair_spill_bench.rs  memory_budget_bench.rs  memory_pressure_bench.rs  query_bench.rs  row_id_bench.rs  runtime_handoff_bench.rs
sandbox/plugins/analytics-backend-datafusion/rust/proptest-regressions/: native_node_stats.txt
sandbox/plugins/analytics-backend-datafusion/rust/src/: agg_mode.rs  api.rs  cache.rs  can_match.rs  cancellation.rs  checked_arith_rewrite.rs  completion.rs  cross_rt_stream.rs  custom_cache_manager.rs  datafusion_query_config.rs  eviction_policy.rs  executor.rs  ffm.rs  helper.rs  indexed_executor.rs  io.rs  lib.rs  liquid_cache.rs  local_executor.rs  memory.rs  memory_guard.rs  native_error.rs  native_node_stats.rs  optimizer_providers.rs  partition_stream.rs  phantom_corrector.rs  pme_reader.rs  project_row_id_analyzer.rs  project_row_id_optimizer.rs  query_budget.rs  query_executor.rs  query_memory_budget.rs  query_memory_pool_tracker.rs  query_tracker.rs  relabel_exec.rs  row_id_benchmark.rs  row_id_tests.rs  runtime_manager.rs  schema_coerce.rs  scoped_index_optimizer.rs  (+14 more)
sandbox/plugins/analytics-backend-datafusion/rust/tests/: async_entry_gates.rs  budget_accuracy_test.rs  local_exec_test.rs  stringview_gc_test.rs
(+35205 files in other folders)
