[workspace]
resolver = "2"
members = [
    "jni"
]

[workspace.dependencies]
# DataFusion dependencies
datafusion = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-datasource = "51.0.0"
arrow-json = "57.1.0"
arrow = { version = "57.1.0", features = ["ffi", "ipc_compression"] }
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
arrow-buffer = "57.1.0"
downcast-rs = "1.2"


# JNI dependencies
jni = "0.21"

# Substrait support
datafusion-substrait = "51.0.0"
prost = "0.14"


# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
#tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-metrics = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
# Parquet support
parquet = "57.1.0"

# Object store for file access
object_store = "=0.12.4"
url = "2.0"

# Substrait support
substrait = "0.47"

# Temporary directory support
tempfile = "3.0"
chrono = "0.4.41"

async-trait = "0.1.89"
itertools = "0.14.0"
rstest = "0.26.1"
regex = "1.11.2"
#
#[build-dependencies]
#cbindgen = "0.27"

once_cell = "1.21.3"
tokio-stream = "0.1.17"
parking_lot = "0.12.5"
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = true    # Enable incremental compilation
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1          # Some optimization for reasonable performance
lto = false           # Disable LTO for faster builds
codegen-units = 1    # More parallel compilation
incremental = true    # Enable incremental compilation
debug = "full"
strip = false
