[workspace]
resolver = "2"
members = [
    "jni"
]

[workspace.dependencies]
# DataFusion dependencies
datafusion = "52.1.0"
datafusion-expr = "52.1.0"
datafusion-datasource = "52.1.0"
datafusion-datasource-parquet = "52.1.0"
datafusion-common = "52.1.0"
datafusion-execution = "52.1.0"
datafusion-physical-expr = "52.1.0"
arrow-json = "57.3.0"
arrow = { version = "57.3.0", features = ["ffi", "ipc_compression"] }
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
arrow-buffer = "57.3.0"
downcast-rs = "1.2"


# JNI dependencies
jni = "0.21"

# Substrait support
datafusion-substrait = "52.1.0"
prost = "0.14"


# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
#tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-metrics = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
# Parquet support
parquet = "57.3.0"

# Object store for file access
object_store = "0.12.5"
url = "2.0"

# Liquid Cache for byte-level caching
liquid-cache-datafusion-local = "0.1.12"

# Substrait support
substrait = "=0.62.0"

# Temporary directory support
tempfile = "3.0"
chrono = "0.4.41"

async-trait = "0.1.89"
itertools = "0.14.0"
rstest = "0.26.1"
regex = "1.11.2"
#
#[build-dependencies]
#cbindgen = "0.27"

once_cell = "1.21.3"
tokio-stream = "0.1.17"
parking_lot = "0.12.5"
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = true    # Enable incremental compilation
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1          # Some optimization for reasonable performance
lto = false           # Disable LTO for faster builds
codegen-units = 1    # More parallel compilation
incremental = true    # Enable incremental compilation
debug = "full"
strip = false

# Patch arrow/parquet to local arrow-rs with sparse column chunk fix
# Required by indexed-table crate for correct page index handling
# https://github.com/apache/arrow-rs/pull/9301/changes
#[patch.crates-io]
#parquet = { path = "../../../arrow-rs/parquet" }
#arrow = { path = "../../../arrow-rs/arrow" }
#arrow-array = { path = "../../../arrow-rs/arrow-array" }
#arrow-buffer = { path = "../../../arrow-rs/arrow-buffer" }
#arrow-data = { path = "../../../arrow-rs/arrow-data" }
#arrow-schema = { path = "../../../arrow-rs/arrow-schema" }
#arrow-select = { path = "../../../arrow-rs/arrow-select" }
#arrow-ipc = { path = "../../../arrow-rs/arrow-ipc" }
#arrow-cast = { path = "../../../arrow-rs/arrow-cast" }
#arrow-ord = { path = "../../../arrow-rs/arrow-ord" }
#arrow-string = { path = "../../../arrow-rs/arrow-string" }
#arrow-row = { path = "../../../arrow-rs/arrow-row" }
#arrow-csv = { path = "../../../arrow-rs/arrow-csv" }
#arrow-json = { path = "../../../arrow-rs/arrow-json" }
#arrow-arith = { path = "../../../arrow-rs/arrow-arith" }
