[package]
name = "opensearch-datafusion-jni"
version = "0.1.0"
edition = "2021"
description = "JNI bindings for DataFusion integration with OpenSearch"
license = "Apache-2.0"

[lib]
name = "opensearch_datafusion_jni"
crate-type = ["cdylib"]

[dependencies]
datafusion = "49.0.0"
arrow = { version = "55.2", features = ["ffi", "ipc_compression"] }
arrow-json = "55.2"

# JNI dependencies
jni = "0.21"

# Substrait support
datafusion-substrait = "49.0.0"
prost = "0.13"


# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1          # Some optimization for reasonable performance
lto = false           # Disable LTO for faster builds
codegen-units = 16    # More parallel compilation
incremental = true    # Enable incremental compilation
