[package]
name = "opensearch-datafusion-jni"
version = "0.1.0"
edition = "2021"
description = "JNI bindings for DataFusion integration with OpenSearch"
license = "Apache-2.0"

[lib]
name = "opensearch_datafusion_jni"
crate-type = ["cdylib"]

[dependencies]
# DataFusion dependencies
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-datasource = { workspace = true }
arrow-json = { workspace = true }
arrow = { workspace = true }
#arrow = "55.2.0"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }

# JNI dependencies
jni = { workspace = true }

# Substrait support
datafusion-substrait = { workspace = true }
prost = { workspace = true }


# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
#tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log ={ workspace = true }
# Parquet support
parquet = { workspace = true }

# Object store for file access
object_store = { workspace = true }
url = { workspace = true }

# Substrait support
substrait = { workspace = true }

# Temporary directory support
tempfile ={ workspace = true }
chrono = { workspace = true }

async-trait = { workspace = true }
itertools = { workspace = true }
rstest = { workspace = true }
regex = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
[build]
rustflags = ["-C", "force-frame-pointers=yes","symbol-mangling-version=v0"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = true
debug = true
strip = false

[profile.dev]
opt-level = 1          # Some optimization for reasonable performance
lto = false           # Disable LTO for faster builds
codegen-units = 16    # More parallel compilation
incremental = true    # Enable incremental compilation
debug = true
strip = false
