[workspace]
resolver = "2"
members = [
    "common",
    "macros",
    "lib",
]

[workspace.dependencies]
mimalloc = { version = "0.1.48", default-features = false }
native-bridge-common = { path = "common" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = true
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = "full"
strip = false
