[workspace]
resolver = "2"
members = [
    "common",
    "macros",
    "lib",
    "../../../plugins/analytics-backend-datafusion/rust",
    "../../../plugins/parquet-data-format/src/main/rust",
    "../../../plugins/native-repository-s3/src/main/rust",
    "../../../plugins/native-repository-gcs/src/main/rust",
    "../../../plugins/native-repository-azure/src/main/rust",
    "../../../plugins/native-repository-fs/src/main/rust",
    "../../../libs/tiered-storage/src/main/rust",
]

[workspace.dependencies]
# Arrow / Parquet
arrow = { version = "57.3.0", features = ["ffi"] }
arrow-array = "57.3.0"
arrow-ipc = "57.3.0"
arrow-schema = "57.3.0"
arrow-buffer = "57.3.0"
parquet = "57.3.0"

# DataFusion
datafusion = "52.1.0"
datafusion-expr = "52.1.0"
datafusion-datasource = "52.1.0"
datafusion-common = "52.1.0"
datafusion-execution = "52.1.0"
datafusion-physical-expr = "52.1.0"
datafusion-substrait = "52.1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1.17"

# Serialization
prost = "0.14"
substrait = "=0.62.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Allocator
mimalloc = { version = "0.1.48", default-features = false }

# Misc
dashmap = "5.5"
num_cpus = "1.16"
object_store = "0.12.5"
url = "2.0"
tempfile = "3.0"
chrono = "0.4"
once_cell = "1.21.3"
crc32fast = "1.4"
parking_lot = "0.12.5"
lazy_static = "1.4.0"
rayon = "1.10"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1"
criterion = { version = "0.5", features = ["async_tokio"] }

# Internal
native-bridge-common = { path = "common" }
opensearch-repository-s3 = { path = "../../../plugins/native-repository-s3/src/main/rust" }
opensearch-repository-gcs = { path = "../../../plugins/native-repository-gcs/src/main/rust" }
opensearch-repository-azure = { path = "../../../plugins/native-repository-azure/src/main/rust" }
opensearch-repository-fs = { path = "../../../plugins/native-repository-fs/src/main/rust" }

[profile.release]
lto = true
codegen-units = 1
incremental = true
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = "full"
strip = false
