[workspace]
resolver = "2"
members = [
    "common",
    "macros",
    "lib",
    "../../../plugins/analytics-backend-datafusion/rust",
    "../../../plugins/parquet-data-format/src/main/rust",
    "../../../plugins/native-repository-s3/src/main/rust",
    "../../../plugins/native-repository-gcs/src/main/rust",
    "../../../plugins/native-repository-azure/src/main/rust",
    "../../../plugins/native-repository-fs/src/main/rust",
    "../../../libs/tiered-storage/src/main/rust",
    "../../../plugins/block-cache-foyer/src/main/rust",
]

[workspace.dependencies]
# Arrow / Parquet
arrow = { version = "=58.2.0", features = ["ffi"] }
arrow-array = "=58.2.0"
arrow-ipc = "=58.2.0"
arrow-schema = "=58.2.0"
arrow-buffer = "=58.2.0"
parquet = "=58.2.0"

# DataFusion
datafusion = "=53.1.0"
datafusion-expr = "=53.1.0"
datafusion-datasource = "=53.1.0"
datafusion-common = "=53.1.0"
datafusion-execution = "=53.1.0"
datafusion-physical-expr = "=53.1.0"
datafusion-substrait = "=53.1.0"

# Async
tokio = { version = "=1.51.0", features = ["full"] }
tokio-util = "=0.7.18"
futures = "=0.3.32"
tokio-stream = "=0.1.18"

# Serialization
prost = "=0.14.3"
substrait = "=0.62.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Logging
log = "=0.4.29"

# Allocator
# disable_initial_exec_tls: Required because this library is loaded at runtime via dlopen/JVM FFM.
# Without it, jemalloc uses initial-exec TLS which fails on aarch64 Linux with:
#   "cannot allocate memory in static TLS block"
# The feature switches to global-dynamic TLS model, compatible with runtime loading.
tikv-jemallocator = { version = "=0.6.1", features = ["disable_initial_exec_tls", "profiling"] }
tikv-jemalloc-ctl = { version = "=0.6.1", features = ["stats"] }

# Misc
dashmap = "=5.5.3"
num_cpus = "=1.17.0"
object_store = "=0.13.2"
url = "=2.5.8"
tempfile = "=3.27.0"
chrono = "=0.4.44"
once_cell = "=1.21.4"
crc32fast = "=1.5.0"
parking_lot = "=0.12.5"
lazy_static = "=1.5.0"
rayon = "=1.11.0"
thiserror = "=1.0.69"
async-trait = "=0.1.89"
bytes = "=1.11.1"
criterion = { version = "=0.5.1", features = ["async_tokio"] }
tokio-metrics = { version = "=0.5.0", features = ["rt"] }

# Internal
native-bridge-common = { path = "common" }
opensearch-repository-s3 = { path = "../../../plugins/native-repository-s3/src/main/rust" }
opensearch-repository-gcs = { path = "../../../plugins/native-repository-gcs/src/main/rust" }
opensearch-repository-azure = { path = "../../../plugins/native-repository-azure/src/main/rust" }
opensearch-repository-fs = { path = "../../../plugins/native-repository-fs/src/main/rust" }

[profile.release]
lto = true
codegen-units = 1
incremental = true
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = "full"
strip = false
