[package]
name = "opensearch-foyer-cache"
version = "0.1.0"
edition = "2021"
description = "Disk page cache backed by Foyer — rlib member of the dataformat-native workspace"
license = "Apache-2.0"
workspace = "../../../libs/dataformat-native/rust"

# rlib: compiled into the parent shared library by lib/Cargo.toml.
# No standalone shared library is produced by this crate.
[lib]
name = "opensearch_foyer_cache"
crate-type = ["rlib"]

[dependencies]
foyer        = { workspace = true }
serde        = { workspace = true }
serde_bytes  = { workspace = true }
bytes        = { workspace = true }
dashmap      = { workspace = true }
tokio        = { workspace = true }
log          = { workspace = true }
