[package]
# DataFusion analytics backend native library
name = "opensearch-datafusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
workspace = "../../../libs/dataformat-native/rust"

[lib]
name = "opensearch_datafusion"
crate-type = ["rlib"]

[dependencies]
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-substrait = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

parquet = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }

prost = { workspace = true }
substrait = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
native-bridge-common = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
roaring = "0.10"
thiserror = { workspace = true }

# convert_tz UDF
chrono-tz = "0.10"

tokio-metrics = { workspace = true }

# serde_json `preserve_order` — backs `Map<String,Value>` with `IndexMap`
# instead of `BTreeMap` so json_keys / mutation UDFs see object keys in
# insertion order (parity with legacy SQL-plugin's LinkedHashMap; required by
# `testJsonKeysParityWithLegacy` + byte-for-byte json_extract fixtures).
# Cargo's feature unification propagates this to every workspace member that
# pulls in serde_json. Audit (2026-05-07): the five other consumers
# (parquet-data-format, native-repository-{s3,gcs,azure,fs}) only call
# `serde_json::from_str` into typed config structs, whose field layout is
# fixed at the type level — `preserve_order` is inert for them, so the
# feature is additive with no observable blast radius outside this crate.
serde_json = { workspace = true, features = ["preserve_order"] }
# jsonpath-rust 0.7 — JSONPath evaluator for json_extract. Published at
# https://github.com/besok/jsonpath-rust (crates.io). We pin `0.7` (latest
# `0.7.5`) rather than tracking the newer `1.0` release line because 0.7's
# `JsonPathValue` enum exposes the Found/NoValue distinction json_extract
# relies on to render missing-path matches as literal `null` elements in the
# multi-path JSON-array output. Moving to 1.x is a follow-up once we can
# reproduce that distinction against the new API surface.
jsonpath-rust = "0.7"
# mvfind UDF — regex matching against stringified array elements
regex = "1.10"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = "0.8"

[[bench]]
name = "query_bench"
harness = false
