[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "parquet_dataformat_jni"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"

[dependencies]

arrow = { version = "58.0.0", features = ["ffi"] }

arrow-array = "58.0.0"
arrow-schema = "58.0.0"
arrow-buffer = "58.0.0"

# JNI dependencies
jni = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Shared OpenSearch utilities
vectorized-exec-spi = { path = "../../../../../libs/vectorized-exec-spi/rust" }

# Parquet support
parquet = { version = "58.0.0", features = ["arrow"] }
polars = { version = "0.52.0", features = ["lazy", "parquet", "dtype-datetime", "temporal", "timezones", "pivot", "new_streaming", "cum_agg", "ipc_streaming"] }
polars-core = { version = "0.52.0", features = ["dtype-datetime", "temporal"] }
polars-expr = { version = "0.52.0", features = ["timezones"] }
polars-arrow = { version = "0.52.0", features = ["io_ipc"] }

# Object store for file access
object_store = "0.11"
url = "2.0"
rayon = "1"

# Substrait support
substrait = "0.47"
prost = "0.13"

# Temporary directory support
tempfile = "3.0"

lazy_static = "1.4.0"
dashmap = "7.0.0-rc2"
chrono = "0.4"

[build-dependencies]
cbindgen = "0.27"
