[package]
name = "opensearch-native-lib"
version = "0.1.0"
edition = "2021"
description = "Single cdylib linking all native modules"
license = "Apache-2.0"

[lib]
name = "opensearch_native"
crate-type = ["cdylib"]

[dependencies]
opensearch-datafusion    = { path = "../../../../plugins/analytics-backend-datafusion/rust" }
opensearch-parquet-format = { path = "../../../../plugins/parquet-data-format/src/main/rust" }
opensearch-page-cache    = { path = "../../../../libs/page-cache/src/main/rust" }
native-bridge-common = { workspace = true }
mimalloc = { workspace = true }
