[package]
name = "opensearch-page-cache"
version = "0.1.0"
edition = "2021"
description = "Disk page cache backed by Foyer — rlib member of the dataformat-native workspace"
license = "Apache-2.0"
workspace = "../../../../dataformat-native/rust"

[lib]
name = "opensearch_page_cache"
crate-type = ["rlib"]

[dependencies]
foyer                = { workspace = true }
bytes                = { workspace = true }
dashmap              = { workspace = true }
tokio                = { workspace = true }
log                  = { workspace = true }
native-bridge-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
